force-app/main/default/objects/CSV_Import_Mapping_Filter__mdt/CSV_Import_Mapping_Filter__mdt.object-meta.xml
<CustomObject>
    <description>This provides the ability to filter records that are valid for adding to the export</description>
    <label>CSV Import Mapping Filter</label>
    <pluralLabel>CSV Import Mapping Filters</pluralLabel>
</CustomObject>