force-app/main/default/objects/CSV_Import_Mapping_Filter__mdt/fields/CSV_Import_Mapping__c.field-meta.xml
<CustomField>
    <fullName>CSV_Import_Mapping__c</fullName>
    <inlineHelpText>This is the mapping header that this filter is related to</inlineHelpText>
    <label>CSV Import Mapping</label>
    <referenceTo>CSV_Import_Mapping__mdt</referenceTo>
    <relationshipLabel>CSV Import Mapping Filters</relationshipLabel>
    <relationshipName>CSV_Import_Mapping_Filters</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>