force-app/main/default/objects/CSV_Import_Mapping_Filter__mdt/fields/Filter_type__c.field-meta.xml
<CustomField>
    <fullName>Filter_type__c</fullName>
    <inlineHelpText>Specify the type of filter that we are going to process</inlineHelpText>
    <label>Filter type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
                <default>true</default>
                <label>equals</label>
            </value>
            <value>
                <fullName>not equals</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>greater than or equals</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>less than or equals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>